# moon_wgsl

./: .gitignore  CONTEXT.md  README.mbt.md  README.md  analysis.mbt  bevy_wgsl_parity_test.mbt  comment_strip.mbt  composer.mbt  composer_imports.mbt  composer_registry_test.mbt  composer_test.mbt  descriptors.mbt  descriptors_test.mbt  export.mbt  export_test.mbt  module_graph.mbt  module_graph_test.mbt  moon.mod  moon.mod.json  moon.pkg  moon.work  naga_oil_upstream_mirror_test.mbt  naga_oil_upstream_mirror_wbtest.mbt  parse_imports.mbt  pkg.generated.mbti  preprocess.mbt  preprocess_test.mbt  publish.mbtx  resolver.mbt  tokenizer.mbt  types.mbt  upstream_compose_issue_parity_test.mbt  upstream_compose_parity_test.mbt  wgsl_analysis.mbt  wgsl_directives.mbt  wgsl_registry.mbt  wgsl_virtual_overrides.mbt  wgsl_writeback.mbt
analysis/: import_substitution_wbtest.mbt  imports.mbt  moon.pkg  pkg.generated.mbti  wgsl_analysis.mbt  wgsl_analysis_wbtest.mbt  wgsl_binding.mbt  wgsl_identifier_policy.mbt  wgsl_identifier_policy_wbtest.mbt  wgsl_normalize.mbt  wgsl_reachability.mbt  wgsl_rewrite.mbt  wgsl_virtual_overrides.mbt  wgsl_virtual_overrides_wbtest.mbt
ast/: pkg.generated.mbti  wgsl_ast_identifiers.mbt  wgsl_ast_types.mbt  wgsl_decl_head.mbt  wgsl_raw_top_level.mbt
ast_analysis/: imports.mbt  moon.pkg  pkg.generated.mbti  wgsl_ast_identifiers.mbt
common/: compose_export_types.mbt  descriptors.mbt  diagnostic_types.mbt  directive_types.mbt  import_types.mbt  moon.pkg  (+6 more)
tools/naga_oil_oracle/: Cargo.toml  README.md
tools/naga_oil_oracle/src/: lib.rs  main.rs
(+1042 files in other folders)
